fix design broken on mobile for webkit browsers

--- a/src/sass/trade/trade.scss
+++ b/src/sass/trade/trade.scss
@@ -78,7 +78,7 @@ ul[role=segmented] {
         padding: 10px 0;
     }
     .big-col {
-        flex: 2 0 0;
+        flex: 2;
     }
     #contract_form_container {
         .col {
